# forty-two-sniper

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
docs/: pricing-formulas.html
src/: abi.rs  config.rs  execution.rs  latency.rs  main.rs  metadata.rs  price.rs  rate_limit.rs  validation.rs
